<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Index">
    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="62dp"
        android:text="BLE APP MENU"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="43dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="116dp"
        tools:srcCompat="@drawable/ic_action_blue"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="116dp"
        android:layout_height="60dp"
        android:text="@string/action_StartLEScan"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="263dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="116dp"
        android:layout_height="59dp"
        android:text="@string/action_StopLEScan"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="335dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="114dp"
        android:layout_height="62dp"
        android:text="@string/action_Connect"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="411dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="115dp"
        android:layout_height="71dp"
        android:text="@string/action_Disconnect"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="488dp" />




</LinearLayout>